# rwa

./: .gitignore  README.md  channels.conf  compose.yaml  init.sql
app/: dump_loader.py  pyproject.toml
bot/: Dockerfile  db.py  main.py  pyproject.toml
consumer/: Dockerfile  channels.py  consumer.py  db.py  main.py  ns_event.py  pyproject.toml  sse_consumer.py
ingester/: Dockerfile  dump_ingester.py  pyproject.toml
